GNOME Bugzilla – Bug 696361
rawparse: tcpserversrc ! videoparse ! videoflip causes criticals
Last modified: 2013-03-22 19:43:19 UTC
While using the following pipeline I get a spew of critical errors and I can't figure out if this is due to a gstreamer bug or an issue with my pipeline: $ gst-launch-1.0 tcpserversrc port=5503 ! videoparse format=11 width=300 height=200 framerate=20/1 ! videoconvert ! videoflip method=3 ! autovideosink Setting pipeline to PAUSED ... Pipeline is PREROLLING ... (gst-launch-1.0:21259): GStreamer-CRITICAL **: gst_segment_to_stream_time: assertion `segment->format == format' failed Pipeline is PREROLLED ... Setting pipeline to PLAYING ... New clock: GstSystemClock (gst-launch-1.0:20617): GStreamer-CRITICAL **: gst_segment_to_stream_time: assertion `segment->format == format' failed (gst-launch-1.0:20617): GStreamer-CRITICAL **: gst_segment_to_stream_time: assertion `segment->format == format' failed (gst-launch-1.0:20617): GStreamer-CRITICAL **: gst_segment_to_stream_time: assertion `segment->format == format' failed ... Interestingly, the video is shown correctly despite the critical errors. If I remove the videoflop element, then the critical errors disappear. The problem doesn't reproduce on gstreamer-0.10, where the following pipeline works fine with no critical errors: $ gst-launch tcpserversrc port=5503 ! videoparse format=10 width=300 height=200 framerate=20/1 ! ffmpegcolorspace ! videoflip method=3 ! autovideosink My setup is Ubuntu 12.10 (desktop) with the gstreamer1.0-* and gstreamer0.10-* packages installed: $ gst-launch-1.0 --version gst-launch-1.0 version 1.0.1 GStreamer 1.0.1 $ gst-launch --version gst-launch-0.10 version 0.10.36 GStreamer 0.10.36
commit 0002f7638b2ebd0cc8398b84bdfcfc31e2bf91c1 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Fri Mar 22 19:40:58 2013 +0000 rawparse: send segment event in time format also in push mode When converting the incoming segment from byte to time format, don't just convert the start/stop/time values, but also change the segment format to TIME. https://bugzilla.gnome.org/show_bug.cgi?id=696361