y4mdec: Use the correct strides as used by y4m and convert to GStreamer strides if necessary

https://bugzilla.gnome.org/show_bug.cgi?id=696361